--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<p style="text-align: center;">For Christmas I would like...</p>
 		<ul>
 			<li>
-				<p>Large origami paper (preferably colored on one side, white on the other</p>
+				<p>Large origami paper (<a href="https://www.theorigamipapershop.com/p-684-origami-paper-pack-mixed-solid-colors-975-100-sheets.aspx" target="_blank">link</a>)</p>
 			</li>
 			<li>
 				<p>A computer mouse</p>
@@ -31,6 +31,9 @@
 			</li>
 			<li>
 				<p>A Nintendo Gift Card</p>
+			</li>
+			<li>
+				<p>A Steam gift card</p>
 			</li>
 			<li>
 				<p><i>The Hero of Ages</i> by Brandon Sanderson (book)</p>
